# semi-stocks-2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  changelog.md  config.yaml  pyproject.toml
agents/: CLAUDE.md  README.md  config.yaml  trigger-prompt.md
agents/autoagent/: backtest.py  program.md
agents/reports/: daily-2026-04-07.md  earnings-alert-2026-04-07.md  earnings-alert-2026-04-10.md  earnings-alert-2026-04-13.md  latest.html
agents/src/: daily_runner.py  earnings_calendar.py  install_launchd.py  post_earnings_scorer.py  pre_earnings_predictor.py  report.py  runtime_paths.py  transcript_fetcher.py
canonical/10-wiki/: _backlinks.json  _index.json  _lint.json  index.md  log.md  schema.md
canonical/20-data/: company_roles.yaml
canonical/30-thesis/: thesis.yaml
canonical/40-engine/: report.py  site_data.py
canonical/50-reports/: latest.html  repo-audit-2026-04-08.md
canonical/site-data/: build.json  claims.json  companies.json  edges.json  entities.json  graph.json  pages.json  reports.json  schema.json  search.json  signal_desk.json  signals.json  thesis.json
canonical/site-reader/: THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.ts
canonical/wiki-site/: .compile-cache.json  baker-cyclicality-thesis.html  baker-q4-2025.html  bottleneck-cascade.html  co-packaged-optics.html  cohr-q2-fy2026.html  crwv-q4-2025.html  dwarkesh-dylan-ai-infrastructure-bottlenecks.html  euv-tool-bottleneck.html  graph.html  graph.json  (+25 more)
docs/: UBIQUITOUS_LANGUAGE.md  architecture.md  ash.md  doc-contract.md
(+167 files in other folders)
